Thu Jul 31 01:41:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (add_nls_manpath): Copy manpathlist to omanpathlist
	  after the initial locale checks, to avoid memory leaks (Coverity
	  CID #20).
	  (get_manpath): Free return value of add_system_manpath (Coverity
	  CID #18) and guess_manpath (Coverity CID #19) when they're simply
	  interpolated into another string.

Thu Jul 31 01:18:59 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): Check for failure to open the preformatted
	  cat file (Coverity CID #14).

Thu Jul 31 01:01:13 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/util.c (lang_dir): Free ld if returning xstrdup ("C") instead
	  (Coverity CID #17).

Thu Jul 31 00:55:36 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pathsearch.c (pathsearch): Free path if returning early due to
	  being given a qualified name (Coverity CID #16).

Thu Jul 31 00:51:58 BST 2008  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_pump): Free known_source before returning
	  (Coverity CID #15).

Thu Jul 31 00:47:43 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (word_fnmatch): Free lowwhatis on return paths
	  (Coverity CID #25).

Thu Jul 31 00:40:29 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (parse_for_sec): Fix initialisation of initial_bit
	  (Coverity CID #28).

Tue Jul 15 15:58:24 BST 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Sat Jul 12 16:47:11 BST 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.3-pre1.
	* po/man-db.pot, po/*.po: Update.

Sat Jul 12 16:43:07 BST 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Start 2.5.3.

Sat Jul  5 11:33:16 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080701.

Mon Jun  9 13:47:50 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080601.

Mon Jun  9 09:31:04 BST 2008  Yuri Kozlov  <kozlov.y@gmail.com>
